tests/rosetta/transpiler/Scala/fast-fourier-transform.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/fast-fourier-transform.scala:112: error: overloaded method value >= with alternatives:
  (x: Double)Boolean <and>
  (x: Float)Boolean <and>
  (x: Long)Boolean <and>
  (x: Int)Boolean <and>
  (x: Char)Boolean <and>
  (x: Short)Boolean <and>
  (x: Byte)Boolean
 cannot be applied to (scala.math.BigInt)
    if (c.im >= BigInt(0)) {
             ^
one error found
